--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
             storeFile file('../debug.jks')
             storePassword 'qaz123'
         }
+
     }
     compileSdkVersion 27
     buildToolsVersion '27.0.3'
@@ -15,8 +16,8 @@ android {
         applicationId "me.gfuil.bmap.lite"
         minSdkVersion 15
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         multiDexEnabled true
         ndk { abiFilters "armeabi" }
     }
@@ -29,6 +30,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.gfuilConfig
         }
         debug {
             signingConfig signingConfigs.debugConfig
@@ -48,7 +50,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
